fixed color, aligned text, and added background color

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,8 +1,17 @@
 a{
-	color:rgb(0,255,255);
+	color:rgb(153,255,255);
+	text-align: center;
 
 
 }
 h3{
 	color: rgb(160,160,160);
+	text-align: center;
+}
+h2{
+	color:rgb(255,255,255;
+	text-align:center;
+}
+body{
+	background-color: rgb(0,0,0);
 }
